overflow mobile bug fix

--- a/src/Routes/Private/PriceTracker/pricetracker.css
+++ b/src/Routes/Private/PriceTracker/pricetracker.css
@@ -6,6 +6,7 @@
 
     .pricetracker-fullpage-wrapper{
         height: 100% !important;
+        overflow-x: hidden;
     }
     .pricetracker-fullpage{
         flex-direction: column;
